implemented class to handling commandline params

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -62,7 +62,8 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_chef_OBJECTS = CFoodDatabase.$(OBJEXT) CFoodMenu.$(OBJEXT) \
-	CMealDB.$(OBJEXT) CMealGenerator.$(OBJEXT) main.$(OBJEXT)
+	CMealDB.$(OBJEXT) CMealGenerator.$(OBJEXT) main.$(OBJEXT) \
+	COptionsHandler.$(OBJEXT)
 chef_OBJECTS = $(am_chef_OBJECTS)
 chef_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@
@@ -179,7 +180,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -Wall -std=c++11 --pedantic
-chef_SOURCES = CFoodDatabase.cpp CFoodDatabase.h CFoodMenu.cpp CFoodMenu.h CMealDB.cpp CMealDB.h CMealGenerator.cpp CMealGenerator.h main.cpp
+chef_SOURCES = CFoodDatabase.cpp CFoodDatabase.h CFoodMenu.cpp CFoodMenu.h CMealDB.cpp CMealDB.h CMealGenerator.cpp CMealGenerator.h main.cpp COptionsHandler.cpp COptionsHandler.h
 all: all-am
 
 .SUFFIXES:
@@ -193,9 +194,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign src/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu src/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign src/Makefile
+	  $(AUTOMAKE) --gnu src/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -268,6 +269,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CFoodMenu.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CMealDB.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CMealGenerator.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/COptionsHandler.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 
 .cpp.o:
