first fully working version

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,5 @@ AM_CPPFLAGS = -Wall -std=c++11 --pedantic
 
 bin_PROGRAMS = chef
 
-chef_SOURCES = CFoodDatabase.cpp CFoodDatabase.h CFoodMenu.cpp CFoodMenu.h CMealDB.cpp CMealDB.h CMealGenerator.cpp CMealGenerator.h main.cpp COptionsHandler.cpp COptionsHandler.h
+chef_SOURCES = CMealDB.cpp CMealDB.h CMealGenerator.cpp CMealGenerator.h main.cpp COptionsHandler.cpp COptionsHandler.h CListGenerator.cpp CListGenerator.h
 LIBS = -ljsoncpp
