included amalgamated version of jsoncpp, no dependency on the library anymore

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,4 @@ AM_CPPFLAGS = -Wall -std=c++11 --pedantic
 
 bin_PROGRAMS = chef
 
-chef_SOURCES = CMealDB.cpp CMealDB.h CMealGenerator.cpp CMealGenerator.h main.cpp COptionsHandler.cpp COptionsHandler.h CListGenerator.cpp CListGenerator.h
-LIBS = -ljsoncpp
+chef_SOURCES = CMealDB.cpp CMealDB.h CMealGenerator.cpp CMealGenerator.h main.cpp COptionsHandler.cpp COptionsHandler.h CListGenerator.cpp CListGenerator.h jsoncpp.cpp json-forwards.h json.h
