--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required( VERSION 2.6 )
 
 project( CHEF )
 
-set( CMAKE_CXX_FLAGS "-std=c++11")
+set( CMAKE_CXX_FLAGS "-std=c++1y")
 add_subdirectory( "${PROJECT_SOURCE_DIR}/src" )
 
